[tool.poetry]
name = "dsa"
version = "0.1.0"
description = ""
authors = ["bjarkemoensted <bjarkemoensted@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-codeblocks = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
